--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -136,7 +136,9 @@ pt:
   slack_create_project: "*%{user}* criou um projeto: %{url}"
   slack_create_team_user: "*%{user}*  juntou-se à equipe %{url}"
   slack_create_project_media: "*%{user}* inseriu um novo %{type} ao *%{project}*: %{url}"
-  slack_create_project_media_no_user: 'Um novo %{type} foi inserido ao *%{project}*: %{url}'
+  slack_create_related_media: "*%{user}* adicionou um(a) %{type} relacionado(a) a \"%{parent}\" em *%{project}*: %{url}"
+  slack_create_project_media_no_user: "Um novo %{type} foi inserido ao *%{project}*: %{url}"
+  slack_create_related_media_no_user: "Um(a) %{type} relacionado a \"%{parent}%\" foi adicionado em *%{project}*: %{url}"
   slack_create_task_message: "*%{user}* criou a tarefa %{url} em *%{project}*%{assignment}%{create_note}"
   slack_create_task_assignment: " atribuído(a) a %{assignee}"
   slack_create_task_note: " com nota: %{note}"
@@ -236,7 +238,7 @@ pt:
   max_number_of_team_users_reached: "O número máximo de usuários para este time foi alcançado"
   max_number_of_projects_reached: "O número máximo de projetos para este time foi alcançado"
   cant_set_custom_statuses: "Desculpe, você não pode usar o recurso de status customizados"
-  cant_change_custom_statuses: "Não é possível modificar as definições de status porque alguns status desapareceriam. Esses identificadores de status: %{statuses} estão em uso pelos seguintes itens: %{urls}"
+  cant_change_custom_statuses: "Não foi possível modificar as definições de estados porque alguns estados fariam falta. Estes identificadores de estado: %{statuses} estão em uso nos seguintes itens:\n %{urls} %{others_amount}"
   cant_set_checklist: "Desculpe, você não pode usar o recurso de Checklist"
   cant_create_media_under_this_team_using_extension: "Desculpe, este time não tem permissão para utilizar a extensão de navegador"
   error_invalid_attribution: "Atribuição inválida"
@@ -281,6 +283,17 @@ pt:
   blank_active_status_for_custom_translation_status: "Por favor, forneça um valor ativo para os status de tradução personalizada"
   blank_default_status_for_custom_verification_status: "Por favor, forneça um valor padrão para os status de verificação personalizada"
   blank_active_status_for_custom_verification_status: "Por favor, forneça um valor ativo para os status de verificação personalizada"
+  bot_name_exists_for_this_team: "Já existe um bot com este nome neste time"
+  bot_team_id_doesnt_exist: "Desculpe, não existe um time com este id"
+  bot_team_id_mandatory_to_create: "Lo sentimos, debes escoger un equipo para crear un bot"
+  bot_not_approved_for_installation: "Desculpe, este bot não foi aprovado e por isso não pode ser instalado"
+  only_admins_can_approve_bots: "Desculpe, apenas super admins podem aprovar bots"
+  could_not_save_related_bot_data: "Desculpe, não foi possível adicionar o bot ao time"
+  bot_limited_team_not_pro: "Desculpe, este bot não está disponível para seu time"
+  slack_save_task_comment: "*%{user}* adicionou uma nota à tarefa *%{task}* em %{url} em *%{project}*: %{comment}"
+  bot_cant_add_response_to_task: "Desculpe, um bot não pode responder uma tarefa diretamente... por favor adicione uma sugestão de resposta"
+  bot_cant_add_review_to_task: "Desculpe, um bot não pode avaliar uma sugestão de resposta"
+  task_suggestion_invalid_value: "Desculpe, o valor da sugestão não é válido"
   project_export_download_mail_csv: "Olá!\n\nVocê solicitou um relatório para o projeto %{project} - aqui está um link para baixar-lo: %{link}\n\nO relatório será baixado como um arquivo compactado e criptografado. Para descompactá-lo, use a senha: %{password}\n\nObserve que este link expirará em %{days} dias.\n\nCordialmente,\n\nEquipe %{app}"
   project_export_email_title_images: "Imagens do seu projeto estão prontas para baixar"
   project_export_download_mail_images: "Olá!\n\nVocê solicitou um download de imagens do projeto %{project} - aqui está um link para baixar-las: %{link}\n\nAs imagens serão baixadas como um arquivo compactado e criptografado. Para descompactá-lo, use a senha: %{password}\n\nObserve que este link expirará em %{days} dias.\n\nCordialmente,\n\nEquipe %{app}"
